PAYEE-882 - alignment issue fix

--- a/app/assets/stylesheets/modules/_card.scss
+++ b/app/assets/stylesheets/modules/_card.scss
@@ -20,7 +20,6 @@
 
 @media screen and (min-width:360px) and (max-width:600px) {
   .card {
-    margin:12px;
     height:100px;
     margin-bottom: 100px;
     border-bottom: 0;
